Intellij/tests/invalid/semantics/infiniteloop.masl
/* infinite while loop */
Begin Loop, While 1:
End Loop.